force-app/main/default/objects/Contact/fields/AD8_Form_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>AD8_Form_Submitted_Date__c</fullName>
    <label>AD8 Form Submitted Date</label>
    <type>Date</type>
</CustomField>