force-app/main/default/objects/Contact/fields/AD8Check__c.field-meta.xml
<CustomField>
    <fullName>AD8Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AD8Check</label>
    <type>Checkbox</type>
</CustomField>