force-app/main/default/objects/Contact/fields/AD_Total_No__c.field-meta.xml
<CustomField>
    <fullName>AD_Total_No__c</fullName>
    <label>AD Total No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>