force-app/main/default/objects/Contact/fields/Affiliated_Consumer_Count__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_Consumer_Count__c</fullName>
    <label>Affiliated Consumer Count</label>
    <summaryForeignKey>Provider_Consumer_Affiliation__c.Provider__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>