force-app/main/default/objects/Contact/fields/AfterSubmit__c.field-meta.xml
<CustomField>
    <fullName>AfterSubmit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>After Submit</label>
    <type>Checkbox</type>
</CustomField>