force-app/main/default/objects/Contact/fields/Are_you_currently_employed_as_an_IHSS_ca__c.field-meta.xml
<CustomField>
    <fullName>Are_you_currently_employed_as_an_IHSS_ca__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are you currently employed as an IHSS ca</label>
    <type>Checkbox</type>
</CustomField>