force-app/main/default/objects/Contact/fields/Assigned_Name__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Name__c</fullName>
    <formula>Recruiter__r.FirstName+&apos; &apos; + Recruiter__r.LastName</formula>
    <label>Assigned Name</label>
    <type>Text</type>
</CustomField>