force-app/main/default/objects/Contact/fields/Available_Days__c.field-meta.xml
<CustomField>
    <fullName>Available_Days__c</fullName>
    <label>Available Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>