force-app/main/default/objects/Contact/fields/Available_Timings__c.field-meta.xml
<CustomField>
    <fullName>Available_Timings__c</fullName>
    <label>Available Timings</label>
    <type>Time</type>
</CustomField>