force-app/main/default/objects/Contact/fields/Average_Number_Of_Hours_Worked_Per_Week__c.field-meta.xml
<CustomField>
    <fullName>Average_Number_Of_Hours_Worked_Per_Week__c</fullName>
    <label>Average Number Of Hours Worked Per Week?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>