force-app/main/default/objects/Contact/fields/BackendCheck1__c.field-meta.xml
<CustomField>
    <fullName>BackendCheck1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BackendCheck1</label>
    <type>Checkbox</type>
</CustomField>