force-app/main/default/objects/Contact/fields/BackendCheck2__c.field-meta.xml
<CustomField>
    <fullName>BackendCheck2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BackendCheck2</label>
    <type>Checkbox</type>
</CustomField>