force-app/main/default/objects/Contact/fields/BackendCheck3__c.field-meta.xml
<CustomField>
    <fullName>BackendCheck3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BackendCheck3</label>
    <type>Checkbox</type>
</CustomField>