force-app/main/default/objects/Contact/fields/CCA_Verified_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>CCA_Verified_Phone_Number__c</fullName>
    <inlineHelpText>This field is to capture the Phone number which the CCA team used to reach out to the Provider and if it&apos;s different from the phone number provided by the Union</inlineHelpText>
    <label>CCA Verified Phone Number</label>
    <type>Phone</type>
</CustomField>