force-app/main/default/objects/Contact/fields/Class_Leader__c.field-meta.xml
<CustomField>
    <fullName>Class_Leader__c</fullName>
    <label>Class Leader</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>