force-app/main/default/objects/Contact/fields/Classes_Desired__c.field-meta.xml
<CustomField>
    <fullName>Classes_Desired__c</fullName>
    <label>Classes Desired</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activity Assistance Resources</fullName>
            </value>
            <value>
                <fullName>Autism</fullName>
            </value>
            <value>
                <fullName>BCC (Basic Computer Course)</fullName>
            </value>
            <value>
                <fullName>C.N.A. (Certified Nurse Assistant)-ETP</fullName>
            </value>
            <value>
                <fullName>CNA (Certified Nurse Assistant)</fullName>
            </value>
            <value>
                <fullName>CPR (AHA BLS Blended: Online Theory &amp; In-Person Skills)</fullName>
            </value>
            <value>
                <fullName>CPR (AHA BLS for Health Care Providers)</fullName>
            </value>
            <value>
                <fullName>CPR / Reanimación Cardiopulmonar (RCP)/ 心肺復甦術/急救</fullName>
            </value>
            <value>
                <fullName>CPR BLS for Health Care Provider - ARC (American Red Cross)</fullName>
            </value>
            <value>
                <fullName>CPR First Aid Instructor</fullName>
            </value>
            <value>
                <fullName>Dementia Training</fullName>
            </value>
            <value>
                <fullName>Diabetes Care</fullName>
            </value>
            <value>
                <fullName>Enhanced In Home Supportive Services</fullName>
            </value>
            <value>
                <fullName>Food Handler Certificate</fullName>
            </value>
            <value>
                <fullName>GED (General Educational Development Preparation)</fullName>
            </value>
            <value>
                <fullName>HCAP Covid-19</fullName>
            </value>
            <value>
                <fullName>IHSS+ Alzheimer&apos;s and Dementia (CLTCEC)</fullName>
            </value>
            <value>
                <fullName>In Home Supportive Services / Cuidado en Casa / 家庭護理課程</fullName>
            </value>
            <value>
                <fullName>In Home Supportive Services+ / Cuidado en Casa+ / 家庭護理課程+</fullName>
            </value>
            <value>
                <fullName>In-Person CEUs (Continuing Education Units)</fullName>
            </value>
            <value>
                <fullName>Mental Health and Wellness Workshop</fullName>
            </value>
            <value>
                <fullName>Online CEUs (Continuing Education Units)</fullName>
            </value>
            <value>
                <fullName>Online Live Instructor Led CEU Class</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>RNA (Restorative Nursing Assistant)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>