force-app/main/default/objects/Contact/fields/Console_Roles__c.field-meta.xml
<CustomField>
    <fullName>Console_Roles__c</fullName>
    <label>Console Roles</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Activate LOA</fullName>
            </value>
            <value>
                <fullName>Activity Level 1</fullName>
            </value>
            <value>
                <fullName>Activity Level 2</fullName>
            </value>
            <value>
                <fullName>Activity Level 3</fullName>
            </value>
            <value>
                <fullName>CAIPTC Mode</fullName>
            </value>
            <value>
                <fullName>Class Administrator</fullName>
            </value>
            <value>
                <fullName>Class Coordinator</fullName>
            </value>
            <value>
                <fullName>CMMI Daily Alerts</fullName>
            </value>
            <value>
                <fullName>Community Colleges Administrator</fullName>
            </value>
            <value>
                <fullName>CPR Coordinator</fullName>
            </value>
            <value>
                <fullName>Data Associate</fullName>
            </value>
            <value>
                <fullName>Data Auditor</fullName>
            </value>
            <value>
                <fullName>Delta Data</fullName>
            </value>
            <value>
                <fullName>Files Management</fullName>
            </value>
            <value>
                <fullName>Funding Development Tracker</fullName>
            </value>
            <value>
                <fullName>Global Administrator</fullName>
            </value>
            <value>
                <fullName>Health Net Administrator</fullName>
            </value>
            <value>
                <fullName>Home Care Intern (HCI)</fullName>
            </value>
            <value>
                <fullName>Instructor</fullName>
            </value>
            <value>
                <fullName>Lancaster Administrator</fullName>
            </value>
            <value>
                <fullName>Local 2015</fullName>
            </value>
            <value>
                <fullName>Member Resource Center</fullName>
            </value>
            <value>
                <fullName>Oakland Administrator</fullName>
            </value>
            <value>
                <fullName>Physical Asset Tracker: Admin</fullName>
            </value>
            <value>
                <fullName>Physical Asset Tracker: Global</fullName>
            </value>
            <value>
                <fullName>Program Coordinator</fullName>
            </value>
            <value>
                <fullName>Program Manager</fullName>
            </value>
            <value>
                <fullName>Recruiter</fullName>
            </value>
            <value>
                <fullName>Recruitment Tracker</fullName>
            </value>
            <value>
                <fullName>Regional Manager</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>