force-app/main/default/objects/Contact/fields/Consumer_Participation_form_submitted__c.field-meta.xml
<CustomField>
    <fullName>Consumer_Participation_form_submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consumer Participation form submitted?</label>
    <type>Checkbox</type>
</CustomField>