force-app/main/default/objects/Contact/fields/ConsumerName__c.field-meta.xml
<CustomField>
    <fullName>ConsumerName__c</fullName>
    <label>ConsumerName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>