force-app/main/default/objects/Contact/fields/Count_of_Affiliated_Consumer__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Affiliated_Consumer__c</fullName>
    <label>Count of Affiliated Consumer</label>
    <summaryForeignKey>Provider_Consumer_Affiliation__c.Provider__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>