force-app/main/default/objects/Contact/fields/CPF_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>CPF_Submitted_Date__c</fullName>
    <label>CPF Submitted Date</label>
    <type>Date</type>
</CustomField>