force-app/main/default/objects/Contact/fields/CPR_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>CPR_Valid_From__c</fullName>
    <label>CPR Valid From</label>
    <type>Date</type>
</CustomField>