force-app/main/default/objects/Contact/fields/Current_Consumer_Count__c.field-meta.xml
<CustomField>
    <fullName>Current_Consumer_Count__c</fullName>
    <label>Current Consumer Count</label>
    <summaryFilterItems>
        <field>Provider_Consumer_Affiliation__c.Affiliation_Status__c</field>
        <operation>equals</operation>
        <value>Current</value>
    </summaryFilterItems>
    <summaryForeignKey>Provider_Consumer_Affiliation__c.Provider__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>