force-app/main/default/objects/Contact/fields/Date_of_CMMI_Orientation__c.field-meta.xml
<CustomField>
    <fullName>Date_of_CMMI_Orientation__c</fullName>
    <label>Date of CMMI Orientation</label>
    <type>Date</type>
</CustomField>