force-app/main/default/objects/Contact/fields/Do_you_care_for_a_consumer_who_resides_i__c.field-meta.xml
<CustomField>
    <fullName>Do_you_care_for_a_consumer_who_resides_i__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do you care for a consumer who resides i</label>
    <type>Checkbox</type>
</CustomField>