force-app/main/default/objects/Contact/fields/Do_you_feel_comfortable_using_technology__c.field-meta.xml
<CustomField>
    <fullName>Do_you_feel_comfortable_using_technology__c</fullName>
    <inlineHelpText>Do you feel comfortable using technology to search a website?</inlineHelpText>
    <label>Do you feel comfortable using technology</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>