force-app/main/default/objects/Contact/fields/Do_you_have_access_to_technology__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_access_to_technology__c</fullName>
    <label>Do you have access to technology?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Smartphone</fullName>
            </value>
            <value>
                <fullName>Computer</fullName>
            </value>
            <value>
                <fullName>Tablet</fullName>
            </value>
            <value>
                <fullName>Laptop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>