force-app/main/default/objects/Contact/fields/Do_you_speak_a_language_other_than_Eng__c.field-meta.xml
<CustomField>
    <fullName>Do_you_speak_a_language_other_than_Eng__c</fullName>
    <label>Do you speak a language other than Eng?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>