force-app/main/default/objects/Contact/fields/Do_you_use_your_phone__c.field-meta.xml
<CustomField>
    <fullName>Do_you_use_your_phone__c</fullName>
    <label>Do you use your phone?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>