force-app/main/default/objects/Contact/fields/EdFund_Facility_Primary__c.field-meta.xml
<CustomField>
    <fullName>EdFund_Facility_Primary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Associated Primary EdFund facility with the Provider</inlineHelpText>
    <label>EdFund Facility - Primary</label>
    <referenceTo>EdFund_Facilites__c</referenceTo>
    <relationshipLabel>Provider (Primary)</relationshipLabel>
    <relationshipName>Provider_Primary</relationshipName>
    <type>Lookup</type>
</CustomField>