force-app/main/default/objects/Contact/fields/EdFund_Facility_Secondary__c.field-meta.xml
<CustomField>
    <fullName>EdFund_Facility_Secondary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Associated Secondary EdFund facility with the Provider</inlineHelpText>
    <label>EdFund Facility - Secondary</label>
    <referenceTo>EdFund_Facilites__c</referenceTo>
    <relationshipLabel>Provider (Secondary)</relationshipLabel>
    <relationshipName>Provider_Secondary</relationshipName>
    <type>Lookup</type>
</CustomField>