force-app/main/default/objects/Contact/fields/Emergency_Contact_Primary_Relation__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Primary_Relation__c</fullName>
    <label>Emergency Contact Primary Relation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>