force-app/main/default/objects/Contact/fields/Emergency_Contact_Secondary_Name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Secondary_Name__c</fullName>
    <label>Emergency Contact Secondary Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>