force-app/main/default/objects/Contact/fields/Emergency_Contact_Secondary_Telephone__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Secondary_Telephone__c</fullName>
    <label>Emergency Contact Secondary Telephone</label>
    <type>Phone</type>
</CustomField>