force-app/main/default/objects/Contact/fields/End_Date_Primary__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Primary__c</fullName>
    <label>End Date - Primary</label>
    <type>Date</type>
</CustomField>