force-app/main/default/objects/Contact/fields/End_Date_Secondary__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Secondary__c</fullName>
    <label>End Date - Secondary</label>
    <type>Date</type>
</CustomField>